src/test/deca/context/valid/custom/object/class_new_objects.deca
class Car {
    protected int maxSpeed;
    float height;

    void Car(int maxSpeed, float height) {
        this.maxSpeed = maxSpeed;
        this.height = height;
    }

    void setMaxSpeed(int newSpeed) {
        maxSpeed = newSpeed;
    }

    int getMaxSpeed(int newSpeed) {
        return maxSpeed;
    }
}

{
    Car car1 = new Car();
    Car car2 = new Car();
    car1.Car(230, 2.5);
    car2.Car(250, 2.9);
}